trying to avoid lack of shrink-wrap

--- a/css/screen.css
+++ b/css/screen.css
@@ -1069,7 +1069,7 @@ ul.primary a:hover, ul.primary a:focus {
   border-color: #f2f2f2;
 }
 ul.primary a.active {
-  background-color: white;
+  background-color: transparent;
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #e9e9e9), color-stop(100%, rgba(233, 233, 233, 0)));
   background-image: -webkit-linear-gradient(#e9e9e9, rgba(233, 233, 233, 0));
   background-image: -moz-linear-gradient(#e9e9e9, rgba(233, 233, 233, 0));
@@ -1082,6 +1082,7 @@ ul.primary a.active {
 .ie6-8 ul.primary a.active {
   *zoom: 1;
   filter: progid:DXImageTransform.Microsoft.gradient(gradientType=0, startColorstr='#FFE9E9E9', endColorstr='#FFFFFFFF');
+  display: inline-block;
 }
 
 ul.secondary {
