--- a/sass/common/_tabs.scss
+++ b/sass/common/_tabs.scss
@@ -71,7 +71,7 @@ ul.primary {
       border-color: #f2f2f2;
     }
     &.active {
-      background-color: $tabs-container-bg;
+      background-color: transparent;
       @include background-image(linear-gradient(rgba(#e9e9e9, 1), rgba(#e9e9e9, 0)));
       border-color: #fff;
     }
@@ -80,6 +80,7 @@ ul.primary {
 
 .ie6-8 ul.primary a.active {
   @include filter-gradient(#e9e9e9, $tabs-container-bg);
+  display: inline-block;
 }
 
 //
